add profile component and update routing; fix token return in auth service; add createCall method in call service; adjust bottom navigator and dashboard layout

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -5,6 +5,7 @@
     </h1>
 
     <!-- Filtros -->
+  <div class="overflow-x-auto">
     <div class="mb-6 flex gap-4">
       <button
         *ngFor="
@@ -18,7 +19,7 @@
         {{ status }}
       </button>
     </div>
-
+  </div>
     <!-- Lista de Chamados -->
     <div class="space-y-4">
       <div
