--- a/src/app/components/bottom-navigator/bottom-navigator.component.html
+++ b/src/app/components/bottom-navigator/bottom-navigator.component.html
@@ -31,10 +31,10 @@
 
     <!-- Registrar Chamado -->
     <div
-      (click)="navigateTo('register-call')"
+      (click)="navigateTo('register')"
       class="flex flex-col items-center cursor-pointer"
-      [class.text-caribbean_current-500]="activeMenu === 'register-call'"
-      [class.text-gray-500]="activeMenu !== 'register-call'"
+      [class.text-caribbean_current-500]="activeMenu === 'register'"
+      [class.text-gray-500]="activeMenu !== 'register'"
     >
       <svg
         xmlns="http://www.w3.org/2000/svg"
