--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,33 +1,35 @@
-<div class="p-8 bg-jet-900 min-h-screen text-white">
-  <h1 class="text-3xl font-bold text-caribbean_current-500 mb-6">Perfil</h1>
+<app-layout>
+  <div class="p-8 bg-jet-900 min-h-screen text-white">
+    <h1 class="text-3xl font-bold text-caribbean_current-500 mb-6">Perfil</h1>
 
-  <!-- Informações do Usuário -->
-  <div class="bg-white p-6 rounded-lg shadow-lg text-black space-y-4">
-    <h2 class="text-xl font-bold">{{ user.name }}</h2>
-    <p><strong>Email:</strong> {{ user.email }}</p>
-  </div>
+    <!-- Informações do Usuário -->
+    <div class="bg-white p-6 rounded-lg shadow-lg text-black space-y-4">
+      <h2 class="text-xl font-bold">{{ user.name }}</h2>
+      <p><strong>Email:</strong> {{ user.email }}</p>
+    </div>
 
-  <!-- Opções -->
-  <div class="mt-6 space-y-4">
-    <button
-      class="w-full px-4 py-2 bg-gray-200 text-gray-800 rounded-md hover:bg-gray-300"
-    >
-      Alterar Senha
-    </button>
-    <button
-      class="w-full px-4 py-2 bg-gray-200 text-gray-800 rounded-md hover:bg-gray-300"
-    >
-      Configurações
-    </button>
-  </div>
+    <!-- Opções -->
+    <div class="mt-6 space-y-4">
+      <button
+        class="w-full px-4 py-2 bg-gray-200 text-gray-800 rounded-md hover:bg-gray-300"
+      >
+        Alterar Senha
+      </button>
+      <button
+        class="w-full px-4 py-2 bg-gray-200 text-gray-800 rounded-md hover:bg-gray-300"
+      >
+        Configurações
+      </button>
+    </div>
 
-  <!-- Logout -->
-  <div class="mt-6">
-    <button
-      (click)="logout()"
-      class="w-full px-4 py-2 bg-red-500 text-white rounded-md hover:bg-red-600"
-    >
-      Sair
-    </button>
+    <!-- Logout -->
+    <div class="mt-6">
+      <button
+        (click)="logout()"
+        class="w-full px-4 py-2 bg-red-500 text-white rounded-md hover:bg-red-600"
+      >
+        Sair
+      </button>
+    </div>
   </div>
-</div>
+</app-layout>
