--- a/src/app/components/top-menu/top-menu.component.html
+++ b/src/app/components/top-menu/top-menu.component.html
@@ -15,9 +15,9 @@ bg-jet text-white p-4">
       Dashboard
     </a>
     <a
-      (click)="navigateTo('register-call')"
+      (click)="navigateTo('register')"
       class="cursor-pointer hover:text-caribbean_current-500"
-      [class.text-caribbean_current-500]="activeMenu === 'register-call'"
+      [class.text-caribbean_current-500]="activeMenu === 'register'"
     >
       Registrar Chamado
     </a>
