--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,7 +9,7 @@
 
     <!-- Logo da Empresa -->
     <div class="absolute top-20 w-full flex justify-center z-10">
-      <img src="assets/logo-modularis.svg" alt="Logo Modularis" class="w-full h-auto" />
+      <!-- <img src="assets/logo_2.jpeg" alt="Logo Modularis" class="w-full h-auto" /> -->
     </div>
 
 
