feature: adjust layout

--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -23,7 +23,7 @@
     </button>
 
     <!-- Detalhes do Chamado -->
-    <div class="bg-white p-6 rounded-lg shadow-lg text-black">
+    <div class="bg-white p-6 rounded-lg shadow-lg text-black mb-10">
       <h1 class="text-2xl font-bold mb-4">Detalhes do Chamado</h1>
       <p><strong>Cliente:</strong> {{ call.cliente }}</p>
       <p><strong>Descrição:</strong> {{ call.descricao }}</p>
